--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
+<!--
+Author: Anxhela Halili
+File: index.html
+Purpose: Front-end interface for QuickCalc, a simple web-based calculator for evaluating
+         custom mathematical expressions using a Flask backend.
+Dependencies:
+    - script.js (client-side logic)
+    - styles.css (optional styling)
+    - Google Fonts (IBM Plex Sans)
+-->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
